--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,15 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+
+// app font
+@font-faec {
+	font-family: Open-sans;
+	src: url('../assets/fonts/Open-sans.woff2') format("woff2");
+}
+
+* {
+		font-family: Open-sans;
+}
